# t-rade

./: README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/config/: settings.py
